--- a/reactnd-contacts-server/client/index.html
+++ b/reactnd-contacts-server/client/index.html
@@ -11,7 +11,7 @@
   </body>
   <script>
     const showContacts = () => {
-      fetch("http://localhost:4000/contacts", {
+      fetch("database-1.c3dtwr18rfth.us-east-1.rds.amazonaws.com:5432/contacts", {
         headers: { Authorization: "whatever-you-want" },
       })
       .then(res => res.json())
